# eltclsh

./: Makefile.am  Makefile.in  README  configure  configure.ac  eltclsh.1  eltclsh.pc.in
m4/: elconfig.h.in  tcl.m4
src/: Makefile.am  Makefile.in  complete.c  el.c  eltclsh.c  eltclsh.h  elwish.c  init.c  loop.c  parse.c  parse.h  signal.c
tcl/: Makefile.am  Makefile.in  complete.tcl  init.tcl  tools.tcl
